# spikeformer-neuromorphic-kit

./: .bandit  .benchmarks.yml  .dependabot.yml  .dockerignore  .dockersecurityscan.yml  .editorconfig  .env.example  .gitattributes  .gitignore  .noxfile.py  .pre-commit-config.yaml  .releaserc.json  .safety-policy.json  .secrets.baseline  .syft.yaml  .trivyignore  API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_BREAKTHROUGH_RESEARCH_PUBLICATION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_COMPLETION.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  FINAL_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  FINAL_INTEGRATION_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  SDLC_COMPLETION_REPORT.md  (+142 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-attach.sh  post-create.sh  post-start.sh  update-content.sh
.github/: CLAUDE.md  CODEOWNERS  CODEOWNERS_TEMPLATE  SECURITY.md  WORKFLOWS_SETUP.md  dependabot.yml  integration-checklist.md  performance.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  energy_performance_issue.yml  feature_request.md  hardware_bug_report.yml  hardware_issue.md  hardware_support.yml  performance_regression.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  hardware-tests.yml  metrics-collection.yml  release.yml  security-scan.yml
.terragon/: IMPLEMENTATION_SUMMARY.md  autonomous-executor.py  config.yaml  dependency-scanner.py  performance-analysis.json  performance-optimizer.py  security-scan-results.json  value-metrics.json
backups/: backup_shutdown_9c2c9b04c2560becfd07e6120e170e01_1755930852.json
deployment/: README.md  deploy.sh  production_config.py
deployment/ci-cd/: README.md  github-actions-template.yml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: advanced-hpa.yaml  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
deployment/monitoring/: prometheus-rules.yaml  prometheus.yml  spikeformer-dashboard.json
deployment/scripts/: backup.sh  build-docker.sh  deploy-production.sh  health-check.py  production-health-check.py  recovery.sh
deployment_production/: DEPLOYMENT_GUIDE.md  Dockerfile.prod  deployment_summary.json  k8s-deployment.yaml  prometheus.yml
deployment_ready/: DEPLOYMENT_GUIDE.md  global_config.json
deployment_ready/compliance/: ccpa_policy.md  compliance_status.json  gdpr_policy.md  pdpa_policy.md  privacy_policy.md
deployment_ready/docker/: Dockerfile  docker-compose.yml  nginx.conf
deployment_ready/i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
deployment_ready/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
deployment_ready/monitoring/: grafana_dashboard.json  prometheus.yml
deployment_ready/terraform/: main.tf  variables.tf
docs/: CHANGELOG_TEMPLATE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  GITHUB_WORKFLOWS_SETUP.md  PERFORMANCE_OPTIMIZATION.md  ROADMAP.md  SDLC_ENHANCEMENT_PLAN.md  SDLC_IMPLEMENTATION_SUMMARY.md  SETUP_REQUIRED.md
docs/adr/: 001-hardware-abstraction-layer.md  template.md
docs/guides/deployment/: production-deployment.md
docs/guides/developer/: contributing.md
docs/guides/user/: getting-started.md
docs/monitoring/: observability-guide.md
docs/runbooks/: deployment.md  disaster_recovery.md  incident_response.md
docs/testing/: testing-strategy.md
docs/workflows/: README.md  ci_cd_architecture.md  github_actions_setup.md
docs/workflows/examples/: ci-cd-pipeline.yml  (+3 more)
k8s_manifests/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
monitoring/: alert_manager.yml  alert_rules.yml  blackbox-config.yml  docker-compose.monitoring.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml  tempo-config.yaml
monitoring_prod/: grafana-dashboard.json  prometheus.yml
publications/: journal_paper.md  patent_application_1.md  patent_application_2.md
quality_gates_results/: advanced_quality_gates_report.md
quantum_env/: pyvenv.cfg
research_publication/: breakthrough_research_paper.md
scripts/: build-and-scan.sh  check-metric-thresholds.py  check_model_sizes.py  collect-metrics.py  container-security.py  container_security_scan.py  dev-setup.sh  generate-metrics-report.py  generate_sbom.py  hardware_security_scan.py  security_scan.py  validate_hardware_configs.py
spikeformer/: __init__.py  adaptive.py  benchmarking.py  bio_meta_learning.py  breakthrough_algorithms.py  caching.py  compliance.py  concurrency.py  conversion.py  cross_platform.py  emergent_intelligence.py  encoding.py  energy_optimal_networks.py  energy_optimization.py  enterprise_hyperscale.py  error_handling.py  event_driven_nas.py  fusion.py  globalization.py  hardware.py  health.py  i18n.py  meta_neuromorphic.py  models.py  monitoring.py  multimodal.py  neuromorphic_compiler.py  neurons.py  optimization.py  performance.py  production_deployment.py  profiling.py  quantum_neuromorphic.py  quantum_scaling.py  quantum_spike_recognition.py  quantum_temporal_fusion.py  research.py  robustness.py  scaling.py  security.py  (+4 more)
spikeformer/cli/: __init__.py  convert.py  deploy.py  main.py  profile.py  train.py
tests/: __init__.py  conftest.py  test_adaptive.py  test_comprehensive_coverage.py  test_encoding.py  test_models.py  test_neurons.py  test_quantum_scaling.py  test_research.py  test_validation.py
tests/hardware/: test_loihi2.py
tests/integration/: test_conversion_pipeline.py  test_end_to_end.py
tests/load/: __init__.py  locustfile.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: test_conversion.py  test_encoding.py  test_models.py  test_neurons.py
tests/utils/: __init__.py  assertions.py  fixtures.py  generators.py  mocks.py
(+2 files in other folders)
